# EnTranscribe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml
public/: manifest.webmanifest  sw.js
public/wasm/: entranscribe.js
scripts/: build-wasm.sh
src/: audio.test.ts  audio.ts  diagnostics.ts  format.test.ts  format.ts  main.ts  models.test.ts  models.ts  style.css  whisper-client.ts  whisper.worker.ts
wasm/: entranscribe.cpp
